# telepiplex

./: .gitignore  AGENTS.md  Dockerfile  Dockerfile.local  README.md  README_EN.md  build.sh  catalog.yaml  catalog.yaml.sha256  config.default.yaml  config.schema.json  docker-compose.yaml  manifest.yaml  pyproject.toml  requirements-feature.txt  requirements.txt  update.md
examples/echo_feature/: config.default.yaml  config.schema.json  manifest.yaml  pyproject.toml
examples/echo_feature/src/telepiplex_echo/: __init__.py  runtime.py
features/caption/: README.md  manifest.yaml  pyproject.toml  requirements-feature.txt
features/caption/src/telepiplex_caption/: __init__.py  runtime.py
features/caption/tests/: test_placeholder_runtime.py
features/search/: README.md  config.default.yaml  config.schema.json  manifest.yaml  pyproject.toml
features/search/src/telepiplex_search/: __init__.py  ai.py  config_wizard.py  context.py  entity_graph.py  planner.py  (+11 more)
features/search/tests/: test_candidate_score.py  test_config_schema_contract.py  test_config_wizard.py  test_deterministic_planner.py  test_direct_link.py  test_douban_adapter.py  test_entity_graph.py  test_evidence_verifier.py  test_feature_service.py  test_input_contract.py  test_prowlarr_adapter.py  test_ranked_planner.py  test_release_gate.py  test_release_report.py  test_search_ai_pipeline.py  test_search_plan.py  test_search_planner_service.py  test_search_utils.py  test_series_scope.py  test_source_orchestrator.py  test_source_tools.py  test_title_policy.py  test_tvdb_adapter.py  test_wikipedia_adapter.py
(+471 files in other folders)
