[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telepiplex-plex-management"
version = "1.0.3"
requires-python = ">=3.12"
dependencies = [
  "telepiplex-plugin-sdk==1.0.1",
  "requests>=2.32,<3",
  "PyYAML>=6.0.2",
  "plexapi>=4.18,<5",
  "mcp>=1.26,<2",
  "uvicorn>=0.40,<1",
]

[tool.setuptools.packages.find]
where = ["src"]
