[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telepiplex-caption"
version = "0.1.0"
description = "Reserved Telepiplex caption Feature"
requires-python = ">=3.12"
dependencies = ["telepiplex-plugin-sdk==1.1.0"]

[tool.setuptools.packages.find]
where = ["src"]
