[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "telepiplex-search"
version = "1.0.3"
requires-python = ">=3.12"
dependencies = ["telepiplex-plugin-sdk==1.1.0", "requests>=2.32,<3", "PyYAML>=6.0.2"]

[tool.setuptools.packages.find]
where = ["src"]
